--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>A whale of a greeting</title>
 <body>
 <h1>hello, world</h1>
 <p>Call me Ismael</p>
+<img src="images/breaching_whale.jpg">
 </body>
 </html>
