--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 <h1>hello, world</h1>
 <p>Call me Ismael</p>
-<img src="images/breaching_whale.jpg">
+<img src="https://learnenough.s3-us-west-2.amazonaws.com/breaching_whale.jpg">
 </body>
 </html>
