--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>A whale of a greeting</title>
 <body>
 <h1>hello, world</h1>
+<a href="about.html">About this project</a>
 <p>Call me Ismael</p>
 <img src="https://learnenough.s3-us-west-2.amazonaws.com/breaching_whale.jpg">
 </body>
